--- a/PageMenu/Contact/index.html
+++ b/PageMenu/Contact/index.html
@@ -52,7 +52,7 @@
                     <a href=""> Portfolio</a>
                 </div>
                 <div class="contact-link">
-                    <img class="contact-link" src="../../img/linkedIn.png" />
+                    <img class="contact-link" src="../../img/linkedin.png" />
                     <a href="https://www.linkedin.com/in/paul-lemattre/?originalSubdomain=fr"> www.linkedin.com/in/paul-lemattre</a>
                 </div>
                 <div class="contact-link">
