--- a/PageMenu/Resume/index.html
+++ b/PageMenu/Resume/index.html
@@ -104,7 +104,7 @@
                         </div>
                         <div class="Below-link-container">
                             <div class="Below-link">
-                                <a data-v-downloadLink href="../../Asset/PDF/CV/CV_Paul_Lemattre19082024.pdf" download="Lemattre_Paul_Resume_20240819.pdf"> Download my Resume</a>
+                                <a data-v-downloadLink href="../../Asset/PDF/CV/Lemattre_Paul_Resume_19082024.pdf" target="_blank" title="Lemattre Paul Resume 19082024"> Download my Resume</a>
                             </div>
                         </div>
                         <p style="font-size:0.75em"> Last Update : 21/09/2024 </p>
