--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                         You can reach me at <a href="mailto:paul.lemattre1@gmail.com"> paul.lemattre1@gmail.com </a> or <a href="#/contact">through here</a>
                     </div>
                 </div>
+                <div class="photo">
+                    <img src="./img/france.png" />
+                </div>
                 <div style="clear: both"></div>
             </div>
         </div>
