--- a/PageMenu/Contact/index.html
+++ b/PageMenu/Contact/index.html
@@ -90,11 +90,13 @@
         sandwitchOpenButton.addEventListener('click', function () {
             // Toggle display between 'none' and 'block'
             sandwitchDiv.classList.toggle('active')
+            document.body.classList.toggle('stop-scrolling');
         });
 
         sandwitchCloseButton.addEventListener('click', function () {
             // Toggle display between 'none' and 'block'
             sandwitchDiv.classList.toggle('active')
+            document.body.classList.toggle('stop-scrolling');
         });
     </script>
 </body>
