--- a/PageMenu/GameProjects/index.html
+++ b/PageMenu/GameProjects/index.html
@@ -43,11 +43,11 @@
             <div style=" width:100%; max-width:1500px">
                 <h1> Games!</h1>
                 <div style="margin-bottom: 30px">
-                    Here are some games that I've created, some are prototypes that I really want to improuve, some are games that I created for school projects and JAM.
+                    Here are some games that I've created, some are prototypes that I really want to improve, some are games that I created for school projects and JAM.
                 </div>
                 <div>
                     <div class="project-list-section">
-                        <h1 class="project-list-title"> Unity projects with Iconic Snails </h1>
+                        <h1 class="project-list-title"> <a href="https://iconic-snails.itch.io">Iconic Snails</a>' Unity projects </h1>
                         <div class="project-list">
                             <div class="project-item" id="Epitaph-Open-Button">
                                 <img class="project-item-image" src="../../img/Projects/Epitaph/thumbnail.png"/>
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                     <div class="project-list-section">
-                        <h1 class="project-list-title"> My studies Unity projects </h1>
+                        <h1 class="project-list-title"> My study Unity projects </h1>
                         <div class="project-list">
                             <div class="project-item high wide" id="RushHour-Open-Button">
                                 <img class="project-item-image" src="../../img/Projects/RushHour/thumbnail.png"/>
@@ -316,8 +316,8 @@
                     <div class="dialog-content">
                         <div>
                             <div class="paragraph">
-                                Can You Reach The Door? is a game made for the computer science license entrance exam at the Canm ENJMIN <br />
-                                This portal game like game is my first Unity game.
+                                Can You Reach The Door? is a game made for the Cnam ENJMIN's computer science bachelor entrance exam <br />
+                                This is my first Unity game.
                             </div>
                             <div class="paragraph center">
                                 <img src="../../img/Projects/CanYouReachTheDoor/thumbnail.png" frameborder="0">
@@ -337,7 +337,7 @@
                                         Time: 5 days
                                     </li>
                                     <li>
-                                        Creation context: Cnam ENJMIN computer science license entrance exam.
+                                        Creation context: Cnam ENJMIN's computer science bachelor entrance exam.
                                     </li>
                                 </ul>
                             </div>
@@ -361,11 +361,11 @@
         </div>
         <div class="footer">
             <div class="left">
-                <a href="#/">Portfolio</a>
+                <a href="../..">Portfolio</a>
                 by Gunilem
             </div>
             <div class="right">
-                Reach me at <a href="mailto:paul.lemattre1@gmail.com"> paul.lemattre1@gmail.com </a> or <a href="#/contact">through here</a>
+                Reach me at <a href="mailto:paul.lemattre1@gmail.com"> paul.lemattre1@gmail.com </a> or <a href="../Contact">through here</a>
             </div>
         </div>
     </div>
