--- a/PageMenu/Resume/index.html
+++ b/PageMenu/Resume/index.html
@@ -116,11 +116,11 @@
         </div>
         <div class="footer">
             <div class="left">
-                <a href="#/">Portfolio</a>
+                <a href="../..">Portfolio</a>
                 by Gunilem
             </div>
             <div class="right">
-                Reach me at <a href="mailto:paul.lemattre1@gmail.com"> paul.lemattre1@gmail.com </a> or <a href="#/contact">through here</a>
+                Reach me at <a href="mailto:paul.lemattre1@gmail.com"> paul.lemattre1@gmail.com </a> or <a href="../Contact">through here</a>
             </div>
         </div>
     </div>
