--- a/index.html
+++ b/index.html
@@ -46,23 +46,20 @@
                     <div>
                         My Name is
                         <strong>Paul Lemattre</strong>
-                        , and I'm a studient at the
-                        <a href="https://enjmin.cnam.fr/cnam-enjmin/presentation/">ENJMIN computer science school</a>
-                        in <strong>Angoulême, France</strong>, focused on video games.<br />
-                        I'm in the second year of the <a href="https://enjmin.cnam.fr/formations/licence-informatique-jeux-video/">computer science license</a>.
+                        , I'm a student at the
+                        <a href="https://enjmin.cnam.fr/cnam-enjmin/presentation/">Cnam Enjmin school</a>
+                        in <strong>Angoulême, France</strong> <br>
+                        I'm in the second year of the <a href="https://enjmin.cnam.fr/formations/licence-informatique-jeux-video/">bachelor in computer science with a specialization in video games</a>.
                     </div>
                     <div style="margin-top: 20px">
-                        I'm passionate about video game development and have decided to focus my studies on this field.<br />
-                        My studies allow me to deepen my knowledge and skills in video game development more than anywhere else, thanks to the alternating rhythm between courses and work.
+                        I'm passionate about video games development and have decided to focus my studies in this field.<br />
                     </div>
                     <div style="margin-top: 20px">
-                        I'm curious by nature and i want things done right.<br />
-                        I've worked on some <a>Games</a> (either for my study, or just for fun) using a game engine like Unity
-                        or just a graphic interface like Pygame (on Python) or windows Form (on C#).
+                        I've worked on some <a href="./PageMenu/GameProjects">Games</a> (either for my study, or just for fun)
                     </div>
                     <div style="margin-top: 80px">
                         I'm currently working for <a href="https://babaoo.com">Babaoo</a> startup as a Unity integrator and Prototyper.<br />
-                        You can reach me at <a href="mailto:paul.lemattre1@gmail.com"> paul.lemattre1@gmail.com </a> or <a href="#/contact">through here</a>
+                        You can reach me at <a href="mailto:paul.lemattre1@gmail.com"> paul.lemattre1@gmail.com </a> or <a href="./PageMenu/Contact">through here</a>
                     </div>
                 </div>
                 <div class="photo">
@@ -77,7 +74,7 @@
                 by Gunilem
             </div>
             <div class="right">
-                Reach me at <a href="mailto:paul.lemattre1@gmail.com"> paul.lemattre1@gmail.com </a> or <a href="#/contact">through here</a>
+                Reach me at <a href="mailto:paul.lemattre1@gmail.com"> paul.lemattre1@gmail.com </a> or <a href="./PageMenu/Contact">through here</a>
             </div>
         </div>
     </div>
