--- a/PageMenu/Contact/index.html
+++ b/PageMenu/Contact/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="contact-link">
                     <img class="contact-link" src="../../img/Portfolio.png" />
-                    <a href=""> Portfolio</a>
+                    <a href="../.."> Portfolio</a>
                 </div>
                 <div class="contact-link">
                     <img class="contact-link" src="../../img/linkedin.png" />
@@ -72,11 +72,11 @@
         </div>
         <div class="footer">
             <div class="left">
-                <a href="#/">Portfolio</a>
+                <a href="../..">Portfolio</a>
                 by Gunilem
             </div>
             <div class="right">
-                Reach me at <a href="mailto:paul.lemattre1@gmail.com"> paul.lemattre1@gmail.com </a> or <a href="#/contact">through here</a>
+                Reach me at <a href="mailto:paul.lemattre1@gmail.com"> paul.lemattre1@gmail.com </a> or <a href="../Contact">through here</a>
             </div>
         </div>
     </div>
