--- a/PageMenu/GameProjects/index.html
+++ b/PageMenu/GameProjects/index.html
@@ -156,7 +156,7 @@
                     <div class="dialog-content">
                         <div>
                             <div class="paragraph">
-                                Epitaph is an Idle game made for the Kenney's Jam 2023.
+                                Starland is an Idle game made for the Kenney's Jam 2023.
                             </div>
                             <div class="paragraph center">
                                 <img src="../../img/Projects/Starland/thumbnail.png" frameborder="0">
