--- a/PageMenu/Resume/index.html
+++ b/PageMenu/Resume/index.html
@@ -48,17 +48,17 @@
                         My Name is
                         <strong>Paul Lemattre</strong>
                         , I'm <strong>19 years old</strong>. <br />
-                        I'm currently in the second year of the Cnam ENJMIN computor science license, focus on video game programming. <br />
-                        I was born in french on the August 29, 2005, and I live in Billy berclau (62138) a french municipality near Lille.
+                        I'm currently in my second year of a bachelor's degree in computer science at the Cnam Enjmin school, the bachelor degree is focused on video game programming. <br />
+                        I was born in french on August 29, 2005. I live in Billy berclau (62138) a french town near Lille.
                     </div>
                     <div style="margin-top: 40px">
                         <h1> My background </h1>
                     </div>
                     <div style="margin-top: 20px">
-                        I passed the French baccalaureate in 2023 with Maths and Compitor Science specialities.<br />
-                        Since then, I'm a studient in the Cnam ENJMIN computor science license, focus on video game programming.<br />
-                        Since january 2024, I've been working for the Valencinnes-based company Babaoo as a Unity integrator and prototyper on a work-study contract.
-                        (4 times a week at work and 1 time at school, a 35-hour week)
+                        I passed the French baccalaureate in 2023 with Maths and Computor Science specialities.<br />
+                        Since then, I've been studying for a bachelor's degree in computer science.<br />
+                        Since january 2024, I've been working as a Unity integrator and prototypist for Babaoo, a company based in Valenciennes. I'm on a work-study contract.
+                        (4 days at work and 1 day at school per week, a 35-hour week)
                     </div>
                     <div style="margin-top: 40px">
                         <h1> My Skill </h1>
@@ -79,9 +79,9 @@
                             <h1> Studies </h1>
                         </div>
                         <div style="margin-left: 20px">
-                            <h3> <a href="https://enjmin.cnam.fr/formations/licence-informatique-jeux-video/">Cnam ENJMIN Computor Science license focused on video game programming </a> </h3>
-                            <div class="skill"> <img src="../../img/calendrier.png" /> 2023-2026, fourth pormotion </div>
-                            <div class="skill"> <img src="../../img/contract.png" /> work-study contract (4 times a week at work and 1 time at school, a 35-hour week) </div>
+                            <h3> <a href="https://enjmin.cnam.fr/formations/licence-informatique-jeux-video/">Bachelor of Computor Science focused on video game programming at the CNAM ENJMIN School </a> </h3>
+                            <div class="skill"> <img src="../../img/calendrier.png" /> 2023-2026, fourth promotion </div>
+                            <div class="skill"> <img src="../../img/contract.png" /> work-study contract (4 days at work and 1 day at school per weeks, a 35-hour week) </div>
                             <div class="skill"> <img src="../../img/brochure.png" /> <a href="../../Asset/PDF/LIJV.pdf" download="Cnam_ENJMIN_License-Brocure.pdf"> Brochure </a> </div>
                         </div>
                         <div style="margin-top: 40px">
@@ -90,15 +90,15 @@
                         <div style="margin-left: 20px">
                             <h3> <a href="https://babaoo.com"> Babaoo </a> </h3>
                             <div class="skill"> <img src="../../img/calendrier.png" />  since january 2024 </div>
-                            <div class="skill"> <img src="../../img/contract.png" />  as Unity integrator and prototyper </div>
-                            <div class="skill"> <img src="../../img/contract.png" /> work-study contract (4 times a week at work and 1 time at school, a 35-hour week) </div>
+                            <div class="skill"> <img src="../../img/contract.png" />  as Unity integrator and prototypist </div>
+                            <div class="skill"> <img src="../../img/contract.png" /> work-study contract (4 days at work and 1 day at school per weeks, a 35-hour week) </div>
 
                             <div style="margin-left: 20px">
                                 Assignments
                                 <ul>
-                                    <li> create a initial prototype of the mini-games designed by the game designers </li>
-                                    <li> Integrate quest and stagging in tune with the playboards </li>
-                                    <li> Use a database to integrate dialogs and quests (usable Unity UI to interact with the database) </li>
+                                    <li> create a initial prototype of a mini-game designed by the game designers </li>
+                                    <li> Integrate the quests and stagings decribed in the playboards </li>
+                                    <li> Use a database to integrate the dialogues and quests (usable Unity UI to interact with the database) </li>
                                 </ul>
                             </div>
                         </div>
