--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
                         I'm passionate about video games development and have decided to focus my studies in this field.<br />
                     </div>
                     <div style="margin-top: 20px">
-                        I've worked on some <a href="./PageMenu/GameProjects">Games</a> (either for my study, or just for fun)
+                        I've worked on some <a href="./PageMenu/GameProjects">Games</a> (either for my studies, or for fun)
                     </div>
                     <div style="margin-top: 80px">
-                        I'm currently working for <a href="https://babaoo.com">Babaoo</a> startup as a Unity integrator and Prototyper.<br />
+                        I'm currently working for <a href="https://babaoo.com">Babaoo</a> startup as a Unity integrator and Prototypist.<br />
                         You can reach me at <a href="mailto:paul.lemattre1@gmail.com"> paul.lemattre1@gmail.com </a> or <a href="./PageMenu/Contact">through here</a>
                     </div>
                 </div>
                 <div class="photo">
-                    <img src="./img/france.png" />
+                    <img src="./img/ProfilePicture.png" />
                 </div>
                 <div style="clear: both"></div>
             </div>
