--- a/index.html
+++ b/index.html
@@ -46,20 +46,20 @@
                     <div>
                         My Name is
                         <strong>Paul Lemattre</strong>
-                        , I'm a student at the
-                        <a href="https://enjmin.cnam.fr/cnam-enjmin/presentation/">Cnam Enjmin school</a>
+                        , and I'm a student at the
+                        <a href="https://enjmin.cnam.fr/cnam-enjmin/presentation/">Cnam Enjmin</a> 
                         in <strong>Angoulême, France</strong> <br>
-                        I'm in the second year of the <a href="https://enjmin.cnam.fr/formations/licence-informatique-jeux-video/">bachelor in computer science with a specialization in video games</a>.
+                        I'm currently in my second year of the <a href="https://enjmin.cnam.fr/formations/licence-informatique-jeux-video/">bachelor's program in computer science, focused in video game development</a>.
                     </div>
                     <div style="margin-top: 20px">
-                        I'm passionate about video games development and have decided to focus my studies in this field.<br />
+                        I'm passionate about video games and have chosen to focus my study in this field.<br />
                     </div>
                     <div style="margin-top: 20px">
-                        I've worked on some <a href="./PageMenu/GameProjects">Games</a> (either for my studies, or for fun)
+                        I've worked on various <a href="./PageMenu/GameProjects">games</a>, both as part of my coursework and as personal projects.
                     </div>
                     <div style="margin-top: 80px">
-                        I'm currently working for <a href="https://babaoo.com">Babaoo</a> startup as a Unity integrator and Prototypist.<br />
-                        You can reach me at <a href="mailto:paul.lemattre1@gmail.com"> paul.lemattre1@gmail.com </a> or <a href="./PageMenu/Contact">through here</a>
+                        At the moment, I'm working for <a href="https://babaoo.com">Babaoo</a> as a Unity integrator and Prototypist.<br />
+                        Feel free to reach out to me at <a href="mailto:paul.lemattre1@gmail.com"> paul.lemattre1@gmail.com </a> or <a href="./PageMenu/Contact">through here</a>
                     </div>
                 </div>
                 <div class="photo">
